--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PAYLOAD_SECRET=mysecret
-MONGODB_URL=mongodb+srv://adminadmin:adminadmin@commerce.njxkkiq.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=
